--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="container mx-auto px-6 fadeIn">
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 mb-8 md:mb-0">
-                        <img src="/storage/emulated/0/pictures/telegram/1.jpg?height=400&width=400" alt="Фото мастера" class="rounded-full shadow-lg" />
+                        <img src="1.jpg?height=400&width=400" alt="Фото мастера" class="rounded-full shadow-lg" />
                     </div>
                     <div class="md:w-1/2 md:pl-8">
                         <h2 class="text-3xl font-bold mb-4">Обо мне</h2>
