--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@
         <form class="bg-white p-6 rounded-lg shadow-lg" action="https://formspree.io/f/mrbgveqg" method="POST">
             <div class="mb-4">
                 <label class="block text-gray-700" for="name">Имя</label>
-                <input class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" type="text" id="name" name="name" required />
+                <input class="mt-1 block w-full border-gray-300 rounded-md shadow-sm text-black" type="text" id="name" name="name" required />
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700" for="email">Email</label>
-                <input class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" type="email" id="email" name="email" required />
+                <input class="mt-1 block w-full border-gray-300 rounded-md shadow-sm text-black" type="email" id="email" name="email" required />
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700" for="message">Сообщение</label>
-                <textarea class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" id="message" name="message" rows="4" required></textarea>
+                <textarea class="mt-1 block w-full border-gray-300 rounded-md shadow-sm text-black" id="message" name="message" rows="4" required></textarea>
             </div>
             <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300" type="submit">Отправить</button>
         </form>
