--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>КомпМастер</title>
-    <title>КомпМастер</title>
     <style>
         .fadeIn {
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
         }
-        
+
         .fadeIn.visible {
             opacity: 1;
             transform: translateY(0);
@@ -70,7 +69,7 @@
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <div class="text-2xl font-bold">КомпМастер</div>
-                <div class="hidden md:flex space-x-4">
+                <div class="hidden lg:flex space-x-4">
                     <a href="#services" class="hover:text-blue-200 transition duration-300">Услуги</a>
                     <a href="#about" class="hover:text-blue-200 transition duration-300">Обо мне</a>
                     <a href="#testimonials" class="hover:text-blue-200 transition duration-300">Отзывы</a>
@@ -79,7 +78,7 @@
                     <a href="#contact" class="hover:text-blue-200 transition duration-300">Контакты</a>
                     <a href="#!" id="privacyLink" class="hover:text-blue-200 transition duration-300">Политика конфиденциальности</a>
                 </div>
-                <button id="menu-btn" class="md:hidden focus:outline-none">
+                <button id="menu-btn" class="lg:hidden focus:outline-none">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
@@ -101,12 +100,24 @@
         </nav>
     </div>
 
-    
+    <!-- Desktop Drop-down Menu -->
+    <div id="desktop-menu" class="hidden lg:block bg-blue-600 text-white">
+        <nav class="flex flex-col space-y-4 p-4">
+            <a href="#services" class="hover:text-blue-200 transition duration-300">Услуги</a>
+            <a href="#about" class="hover:text-blue-200 transition duration-300">Обо мне</a>
+            <a href="#testimonials" class="hover:text-blue-200 transition duration-300">Отзывы</a>
+            <a href="#faq" class="hover:text-blue-200 transition duration-300">FAQ</a>
+            <a href="#gallery" class="hover:text-blue-200 transition duration-300">Галерея</a>
+            <a href="#contact" class="hover:text-blue-200 transition duration-300">Контакты</a>
+            <a href="#!" id="privacyLink" class="hover:text-blue-200 transition duration-300">Политика конфиденциальности</a>
+        </nav>
+    </div>
 
     <script>
         // Скрипт для управления гамбургер-меню
         const menuBtn = document.getElementById('menu-btn');
         const mobileMenu = document.getElementById('mobile-menu');
+        const desktopMenu = document.getElementById('desktop-menu');
 
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
@@ -120,6 +131,8 @@
             });
         });
     </script>
+</body>
+</html>
     <main>
         <section class="relative h-screen flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-700 text-white">
             <div class="text-center">
