--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </body>
 </html>
     <main>
-        <section class="relative h-screen flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-700 text-white">
+        <section class="relative h-[200px] flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-700 text-white">
             <div class="text-center">
                 <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 px-4">Ремонт компьютеров</h1>
                 <p class="text-lg sm:text-xl md:text-2xl mb-8 px-4">Быстро, качественно, с гарантией</p>
