--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="container mx-auto px-6 fadeIn">
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 mb-8 md:mb-0">
-                        <img href ="orig.jpg/400" alt="Фото мастера" class="rounded-full shadow-lg" />
+                        <img scr ="orig.jpg" alt="Фото мастера" class="rounded-full shadow-lg" />
                     </div>
                     <div class="md:w-1/2 md:pl-8">
                         <h2 class="text-3xl font-bold mb-4">Обо мне</h2>
