--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             <div class="container mx-auto px-6 fadeIn">
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 mb-8 md:mb-0">
-                        <img scr ="orig.jpg" alt="Фото мастера" class="rounded-full shadow-lg" />
-                    </div>
+                        <img src="orig.jpg" alt="Фото мастера" class="rounded-full shadow-lg" width="400" /></div>
                     <div class="md:w-1/2 md:pl-8">
                         <h2 class="text-3xl font-bold mb-4">Обо мне</h2>
                         <p class="text-gray-600 mb-4">
