--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold mb-12 text-center">Галерея работ</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <img src="https://via.placeholder.com/400" alt="Работа 1" class="w-full rounded-lg shadow-lg" />
-                    <img src="https://via.placeholder.com/400" alt="Работа 2" class="w-full rounded-lg shadow-lg" />
-                    <img src="https://via.placeholder.com/400" alt="Работа 3" class="w-full rounded-lg shadow-lg" />
+                    <img src="orig-1.jpg" alt="Работа 1" class="w-full rounded-lg shadow-lg" width="400" /></div>
+                    <img src="orig.jpeg" alt="Работа 2" class="w-full rounded-lg shadow-lg" width="400" /></div>
+                    <img src="orig.jpg" alt="Работа 3" class="w-full rounded-lg shadow-lg" width="400" /></div>
                     <!-- Добавьте больше изображений, заменив ссылки на свои -->
                 </div>
             </div>
