--- a/index.html
+++ b/index.html
@@ -232,15 +232,28 @@
         </section>
 
         <section id="gallery" class="py-20 bg-gray-50">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold mb-12 text-center">Галерея работ</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <img src="orig-1.jpg" alt="Работа 1" class="w-full rounded-lg shadow-lg" width="400" /></div>
-                    <img src="orig.jpeg" alt="Работа 2" class="w-full rounded-lg shadow-lg" width="400" /></div>
-                    <img src="orig.jpg" alt="Работа 3" class="w-full rounded-lg shadow-lg" width="400" /></div>
-                    <!-- Добавьте больше изображений, заменив ссылки на свои -->
-                </div>
+        <section id="gallery" class="py-20 bg-gray-50">
+    <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold mb-12 text-center">Галерея работ</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="text-center">
+                <img src="orig-1.jpg" alt="Работа 1" class="w-full rounded-lg shadow-lg" width="400" />
+                <h3 class="text-xl font-semibold mt-2">Работа 1</h3>
+                <p class="text-gray-600">Краткое описание работы 1.</p>
             </div>
+            <div class="text-center">
+                <img src="orig.jpeg" alt="Работа 2" class="w-full rounded-lg shadow-lg" width="400" />
+                <h3 class="text-xl font-semibold mt-2">Работа 2</h3>
+                <p class="text-gray-600">Краткое описание работы 2.</p>
+            </div>
+            <div class="text-center">
+                <img src="orig.jpg" alt="Работа 3" class="w-full rounded-lg shadow-lg" width="400" />
+                <h3 class="text-xl font-semibold mt-2">Работа 3</h3>
+                <p class="text-gray-600">Краткое описание работы 3.</p>
+            </div>
+            <!-- Добавьте больше изображений, заголовков и описаний, заменив ссылки на свои -->
+        </div>
+    </div>
         </section>
 <section id="contact" class="py-20 bg-blue-600 text-white">
     <div class="container mx-auto px-6 fadeIn">
