--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Профессиональные услуги компьютерного мастера: ремонт ПК, настройка и оптимизация систем, удаленная поддержка и консультации. Быстрое и качественное решение ваших проблем с техникой. Обращайтесь за помощью — вернем вашу технику к жизни!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>КомпМастер</title>
