--- a/index.html
+++ b/index.html
@@ -94,11 +94,20 @@
         <a href="#about" class="hover:text-blue-200 transition duration-300">Обо мне</a>
         <a href="#testimonials" class="hover:text-blue-200 transition duration-300">Отзывы</a>
         <a href="#faq" class="hover:text-blue-200 transition duration-300">FAQ</a>
-        <a href="#gallery" class="hover:text-blue-200 transition duration-300">Галерея</a>
-        <a href="#contact" class="hover:text-blue-200 transition duration-300">Контакты</a>
-        <a href="#!" id="privacyLink" class="hover:text-blue-200 transition duration-300">Политика конфиденциальности</a>
-    </nav>
-</div>
+<body class="min-h-screen bg-gray-100">
+    <header class="bg-blue-600 text-white sticky top-0 z-50">
+        <nav class="container mx-auto px-6 py-3">
+            <div class="flex justify-between items-center">
+                <div class="text-2xl font-bold">КомпМастер</div>
+                
+                <button id="menu-btn" class="lg:hidden focus:outline-none" aria-label="Главное меню">
+                    
+                </button>
+            </div>
+        </nav>
+    </header>
+        <!-- Mobile and Desktop Menu -->
+
 
 <script>
     // Скрипт для управления гамбургер-меню
@@ -116,7 +125,7 @@
             el.classList.add('visible');
         });
     });
-</script>
+    </script>
 </body>
 </html>
     <main>
