--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
     </style>
 </head>
 <body>
-    <!-- Основное содержимое вашего сайта -->
-    <body class="min-h-screen bg-gray-100">
+<body class="min-h-screen bg-gray-100">
     <header class="bg-blue-600 text-white sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <div class="text-2xl font-bold">КомпМастер</div>
+                
                 <button id="menu-btn" class="lg:hidden focus:outline-none" aria-label="Главное меню">
+                    
                 </button>
             </div>
         </nav>
     </header>
         <!-- Mobile and Desktop Menu -->
+
 
 <script>
     // Скрипт для управления гамбургер-меню
@@ -93,7 +95,7 @@
             el.classList.add('visible');
         });
     });
-</script>
+    </script>
 </body>
 </html>
     <main>
@@ -243,7 +245,8 @@
         </form>
     </div>
 </section>
-    </main> <footer class="bg-gray-800 text-white py-8">
+    </main> 
+ <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; <span id="currentYear"></span> КомпМастер. Все права защищены.</p>
             <a href="#!" id="privacyLinkFooter" class="text-blue-400 hover:underline">Политика конфиденциальности</a>
