--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         </nav>
     </header>
         <!-- Mobile and Desktop Menu -->
-
+<div id="menu" class="bg-blue-600 text-white">
+        <a href="#!" id="privacyLink" class="hover:text-blue-200 transition duration-300"></a>
+</div>
 
 <script>
     // Скрипт для управления гамбургер-меню
