--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
  <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; <span id="currentYear"></span> КомпМастер. Все права защищены.</p>
-            <a href="#!" id="privacyLinkFooter" class="text-blue-400 hover:underline">Политика конфиденциальности</a>
-        </div>
+            <a href="#!" id="privacyLinkFooter" class="text-blue-500 hover:text-blue-700 hover:underline font-bold text-lg">Политика конфиденциальности</a></div>
     </footer>
 
     <!-- Модальное окно -->
