--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>КомпМастер</title>
     <style>
+        @font-face {
+    font-family: 'YourFont';
+    src: url('your-font-url.woff2') format('woff2');
+    font-display: swap; /* Это минимизирует задержку отрисовки текста */
+        }
         .fadeIn {
             opacity: 0;
             transform: translateY(20px);
