--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
 </html>
     <main>
     <section class="relative h-96 flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-700 text-white">
-    <div class="text-center">
-        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 px-4">Ремонт компьютеров</h1>
-        <p class="text-lg sm:text-xl md:text-2xl mb-8 px-4">Быстро, качественно, с гарантией</p>
+    <div class="text-center px-4">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4">Ремонт компьютеров</h1>
+        <p class="text-lg sm:text-xl md:text-2xl mb-8">Быстро, качественно, с гарантией</p>
         <a href="#contact" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold text-lg hover:bg-blue-100 transition duration-0">
             Связаться
         </a>
     </div>
+</section>
 </section>
         <section id="services" class="py-20 bg-gray-50">
         <div class="container mx-auto px-6 fadeIn">
