--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="#!" id="privacyLink" class="hover:text-blue-200 transition duration-300"></a>
 </div>
 
-<script>
+<script defer>
 
 
     // Эффект fadeIn для секций
@@ -309,7 +309,7 @@
         </div>
     </div>
 
-    <script>
+    <script defer>
         // Устанавливаем текущий год
         document.getElementById('currentYear').textContent = new Date().getFullYear();
 
