--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
                 <p class="font-bold">Александр Смирнов</p>
             </div>
             <div class="bg-white p-6 rounded-lg shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                <p class="text-gray-600 italic mb-4">"Отличная работа! Компьютер заработал как новый!"</p>
+                <p class="font-bold">Александр Смирнов</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                <p class="text-gray-600 italic mb-4">"Отличная работа! Компьютер заработал как новый!"</p>
+                <p class="font-bold">Александр Смирнов</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                <p class="text-gray-600 italic mb-4">"Отличная работа! Компьютер заработал как новый!"</p>
+                <p class="font-bold">Александр Смирнов</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                <p class="text-gray-600 italic mb-4">"Отличная работа! Компьютер заработал как новый!"</p>
+                <p class="font-bold">Александр Смирнов</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg transition-shadow duration-300 hover:shadow-xl">
                 <p class="text-gray-600 italic mb-4">"Быстро и качественно! Рекомендую!"</p>
                 <p class="font-bold">Елена Кузнецова</p>
             </div>
